--- a/src/globals/styles/_globals.scss
+++ b/src/globals/styles/_globals.scss
@@ -1,3 +1,30 @@
-@use './variables' as *;
+@use "./variables" as vars;
+@use "./mixins" as mixins;
 
+:root {
+  @include mixins.export-css-vars();
+  // @include mixins.flex(row, center, center);
+}
 
+body {
+  font-family: var(--icare-font-family);
+  font-size: var(--icare-font-size-md);
+  line-height: var(--icare-line-height-normal);
+  margin: 0;
+}
+
+h1 {
+  font-size: var(--icare-font-size-h1);
+  font-weight: var(--icare-font-weight-bold);
+  line-height: var(--icare-line-height-tight);
+  margin: 0;
+  color: var(--icare-color-text-on-light); // Since they're on dark backgrounds
+}
+
+p {
+  font-size: var(--icare-font-size-p);
+  font-weight: var(--icare-font-weight-regular);
+  line-height: var(--icare-line-height-normal);
+  margin: 0.5rem 0 0 0;
+  color: var(--icare-color-text-on-light); // Since they're on dark backgrounds
+}
