--- a/src/globals/styles/_globals.scss
+++ b/src/globals/styles/_globals.scss
@@ -1,6 +1,22 @@
 @use "./variables" as vars;
 @use "./mixins" as mixins;
 
+/* Global reset / base */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  background-color: rgb(247, 249, 251);
+}
+
+html, body, figure, h1, h2, p {
+  margin: 0;
+  padding: 0;
+}
+
 :root {
   @include mixins.export-css-vars();
   // @include mixins.flex(row, center, center);
@@ -8,7 +24,7 @@
 
 body {
   font-family: var(--icare-font-family);
-  font-size: var(--icare-font-size-md);
+  // font-size: var(--icare-font-size-md);
   line-height: var(--icare-line-height-normal);
   margin: 0;
 }
@@ -19,6 +35,13 @@ h1 {
   line-height: var(--icare-line-height-tight);
   margin: 0;
   color: var(--icare-color-text-on-light); // Since they're on dark backgrounds
+}
+
+h2 {
+  font-size: var(--icare-font-size-h2);
+  font-weight: var(--icare-font-weight-bold);
+  line-height: var(--icare-line-height-tight);
+  color: var(--icare-color-green-secondary); // Since they're on dark backgrounds
 }
 
 p {
