--- a/src/components/icare-logo/icare-logo.scss
+++ b/src/components/icare-logo/icare-logo.scss
@@ -1,3 +1,12 @@
 :host {
-  display: block;
+  a.icare-logo__link {
+    display: inline-block;
+    text-decoration: none;
+    outline: none;
+  }
+  img {
+    display: block;
+    width: auto;
+    // height: 2.5rem; /* adjust as needed */
+  }
 }
