--- a/src/components/icare-page/icare-page.scss
+++ b/src/components/icare-page/icare-page.scss
@@ -4,6 +4,6 @@
   main {
     padding-inline: clamp(1rem, 4vw, 2.5rem); /* responsive side padding */
     margin-inline: auto;
-    max-width: 1200px; /* optional */
+    // max-width: 1200px; /* optional */
   }
 }
