--- a/src/components/icare-section/icare-section.scss
+++ b/src/components/icare-section/icare-section.scss
@@ -2,7 +2,6 @@
   padding-block: var(--icare-padding-lg, 3rem);
 
   ::slotted(.full-bleed) {
-    margin-inline: calc(-1 * clamp(1rem, 4vw, 2.5rem));
-    width: calc(100% + 2 * clamp(1rem, 4vw, 2.5rem));
+    margin-inline: calc(-1 * clamp(1rem, 4vw, 2.5rem)) !important;
   }
 }
