--- a/src/components/icare-web-block/icare-web-block.scss
+++ b/src/components/icare-web-block/icare-web-block.scss
@@ -1,6 +1,7 @@
 :host {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+  justify-items: center;
   gap: 1rem;
   align-items: center;
 
@@ -21,6 +22,8 @@ figure {
   width: 100%;
   border-radius: 20px;
   overflow: hidden;
+  max-width: 500px;
+  // max-height: var(--wb-media-max-height);
 }
 
 img {
@@ -71,6 +74,10 @@ h2 {
   .button-group {
     flex-wrap: nowrap;
     align-items: flex-end;
+  }
+  figure {
+    max-width: 700px;
+    // max-height: var(--wb-media-max-height);
   }
  }
 
